# _metadata

./: .gitignore  README.md  setup.cfg
.metadata/: config.yml
pymeta/: main.py
pymeta/helpers/: environment_vars.py  project_directories.py
pymeta/models/: config.py  env_var.py
