[metadata]
name = pymeta
version = 0.0.0
description = Package to identify python program metadata. Required environment variables, packages, etc
author = Ben Weatherall
license = MIT
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    PyYAML
    pydantic
    aiofiles

python_requires = >=3.9

[options.extras_require]
testing =
    black
    mypy
    ruff
    types-PyYAML
    pytest>=8.1.1
    pytest-mypy
    pytest-ruff!=0.3,!=0.3.1
    pytest-cov >=2.0
    pytest-black
    pytest-mock

development =
    black
    mypy
    ruff
    types-PyYAML
    pytest>=8.1.1
    pytest-mypy
    pytest-ruff!=0.3,!=0.3.1
